--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.7",
+    "multer": "^1.4.2",
     "path": "^0.12.7",
     "request": "^2.88.0"
   },
+  "proxy":"http://localhost:5000",
   "devDependencies": {
     "concurrently": "^4.1.1",
     "nodemon": "^1.19.1"
